Add files via upload
The new GUI for the new client, now has a login page, still have to fix the dimensions of the input colomns for the userID and password. Login successfully works, while the functions logic like search user/item etc. still needs work.